make other websites even larger

--- a/templates/page.html
+++ b/templates/page.html
@@ -188,7 +188,7 @@
     <center><img src="{{logo_url}}" alt = "{{ title }}" style="max-height:250px;"></center>
     <center><small>{{ welcome_html }}</small></center>
     <center>
-      <div style="border: 2px solid gray; padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: medium;">
+      <div style="border: 2px solid gray; padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: large;">
         <div>
           <a href="https://linuxreport.net" target="_blank" style="margin: 2px; color: inherit;">Linux</a>
           <a href="https://covidreport.org" target="_blank" style="margin: 2px; color: inherit;">Covid</a>
