weather, few more cleanups

--- a/templates/page.html
+++ b/templates/page.html
@@ -178,11 +178,11 @@
   </head>
   <body style="background-color:{{ back_color }}">
 
-<!-- <center>
+<center>
   <div style="border: 1px solid gray; padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: small;">
     <center>{{ weather_html }}</center>
   </div>
-  </center> -->
+  </center>
   
   <center>
     <div style="border: 2px solid gray; padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: large;">
@@ -274,7 +274,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 
 
-  <!-- <script>
+<script>
   document.addEventListener("DOMContentLoaded", function() {
     // Weather functionality
     function loadWeather() {
@@ -375,4 +375,4 @@ document.addEventListener("DOMContentLoaded", function () {
     // Load weather data after page content is loaded
     setTimeout(loadWeather, 100);
   });
-  </script> -->
+  </script>
