--- a/templates/sitebox.html
+++ b/templates/sitebox.html
@@ -1,4 +1,4 @@
-<div class="box theme-{{ THEME }}-box" id="feed-{{ feed_id }}">
+<div class="box" id="feed-{{ feed_id }}">
   <center><a target="_blank" href="{{ link }}"><img src="{{ logo }}" alt="{{ alt_tag | safe }}" style="max-height:100px;"/></a></center>
   <center>
     <small>Last updated: {{ last_fetch }}</small>
