old headlines support

--- a/templates/page.html
+++ b/templates/page.html
@@ -265,6 +265,7 @@
         <option value="sepia">Sepia</option>
         <option value="forest">Forest</option>
       </select>
+      <a href="/old_headlines" id="old-headlines-link" style="margin-left: 20px; padding: 5px; text-decoration: underline; color: var(--link); font-size: medium;">Old Headlines</a>
       <button type="save" name="save" onclick="redirect()" style="margin-left: 20px;">Config...</button>
     </div>
   </center>
