--- a/templates/page.html
+++ b/templates/page.html
@@ -169,7 +169,7 @@
         border-radius: 5px;
         font-weight: bold;
         transition: all 0.3s ease;
-        animation: pulse 5s infinite;
+        animation: pulse 3s infinite;
         background: var(--btn-bg);
         border: 2px solid var(--btn-border);
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -290,6 +290,10 @@
     </script>
   </head>
   <body>
+
+<div style="background: var(--btn-bg); color: var(--text); border: 2px solid var(--btn-border); border-radius: 8px; margin: 10px auto 0 auto; max-width: 700px; padding: 8px; font-size: .5em; text-align: center;">
+  <strong>Message from Keith:</strong> Sorry! I fixed some bugs recently, it should be smooth sailing now.
+</div>
 
 <center>
   <div style="border: 1px solid var(--btn-border); padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: small;">
