--- a/templates/config.html
+++ b/templates/config.html
@@ -93,6 +93,10 @@
       <label for="sans_serif">Sans Serif Font:</label>
       {{ form.sans_serif }}
     </div>
+    <div class="form-group">
+      <label for="admin_mode">Admin Mode:</label>
+      {{ form.admin_mode }} <!-- Added Admin Mode Checkbox -->
+    </div>
     <div><i>Drag and Drop to have a custom order.</i></div>
     <div class="url-list">
       {% for urlf in form.urls %}
